fixed overlap issue for dashboard and nav which was making nav inaccessible on smaller screen widths

--- a/moonager/src/routes/navigation/navigation.styles.scss
+++ b/moonager/src/routes/navigation/navigation.styles.scss
@@ -1,9 +1,7 @@
 .navigation {
-    position: absolute;
-    background-position-x: center;
-    height: 100vh;
-    width: 100vw;
+    position: relative;
     z-index: 1;
+    padding-bottom: 100px;
 
     .background-image {
         position: fixed;
